--- a/index.html
+++ b/index.html
@@ -1,23 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt">
-<head>
-				<title>Home</title>
-				<style>
+<html lang="pt-br">
+				<head>
+								<meta charset="UTF-8"> 
+								<meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>HOME</title> <link rel="stylesheet" href="css/style.css"> </head> <body> <nav id="menu-h"> <ul> <li> <a href="http://radarlartis.tk/"> Home </a> </li> <li><a href="http://radarlartis.tk/Sobre/">Sobre</a></li> <li><a href="#">Quem Somos</a></li> <li><a href="#">Contato</a></li> <li><a href="#">Entrar</a></li> </ul> </nav>
+												<style>
 								
 								body{
 												background-image:url(images.jpg);
 								}
 								
 				</style>
-</head>
-<body>
-				<center>
-								<img src="img/title.jpg" alt="490"</img>
-				</center>
-
-</body>
-<h1>Video do Brask</h1>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/3SmP975Mzss" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</html>
-
-
+								</body>
+			</html>
